z-index fix, onclick modal to foreground

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2576,7 +2576,7 @@ div.chat-container {
   border-radius: 7px;
   overflow: hidden;
   width: 60rem;
-  height: 30rem;
+  /* height: 30rem; */
   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
   background-color: rgb(241, 243, 243);
 
